[tool.poetry]
name = "combo"
version = "0.2"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
build = 'build.py'

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = ">=1.21.0,<1.22.0"
Cython = ">=0.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "cython", "numpy>=1.21.0,<1.22.0"]
build-backend = "poetry.core.masonry.api"
